# visual-data-lessons

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
src/visual_data_lessons/common/: __init__.py  config.py  settings_landscape.cfg  settings_portrait.cfg
src/visual_data_lessons/common/objects/: subscribe_reminder.py
src/visual_data_lessons/common/scenes/: base_scene.py  intro.py  outro.py
